<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.preferences.PreferencesFragment"
    android:background="@drawable/gradiente">

    <TextView
        android:id="@+id/tvTextoBr"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/NaBRFlix"
        android:textAlignment="center"
        android:layout_marginTop="126dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        app:layout_constraintTop_toBottomOf="@id/tvTextoBr"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.chip.Chip
            android:id="@+id/chip1"
            style="@style/Widget.MaterialComponents.Chip.Entry"
            app:chipIcon="@drawable/ic_heart2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/comedy"
            android:textColor="@color/black"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/chip2"
            style="@style/Widget.MaterialComponents.Chip.Entry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:chipIcon="@drawable/ic_heart2"
            android:text="@string/action"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/chip3"
            style="@style/Widget.MaterialComponents.Chip.Entry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:chipIcon="@drawable/ic_heart2"
            android:text="@string/horror" />


        <com.google.android.material.chip.Chip
            android:id="@+id/chip4"
            style="@style/Widget.MaterialComponents.Chip.Entry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:chipIcon="@drawable/ic_heart2"
            android:text="@string/romantic" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip5"
            style="@style/Widget.MaterialComponents.Chip.Entry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:chipIcon="@drawable/ic_heart2"
            android:text="@string/thriller" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip6"
            style="@style/Widget.MaterialComponents.Chip.Entry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:chipIcon="@drawable/ic_heart2"
            android:text="@string/adventure" />

    </com.google.android.material.chip.ChipGroup>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:src="@drawable/ic_undraw_movie"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chipGroup"/>

    <TextView
        android:id="@+id/tvPreferencesNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:textColor="@color/topMenuHome"
        android:textSize="16sp"
        android:padding="16sp"
        android:background="?selectableItemBackground"
        android:layout_marginEnd="40dp"
         android:layout_marginBottom="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>