<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.changeemail.ChangeEmailFragment"
    android:background="@drawable/gradiente_externo">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.fragments.changeemail.ChangeEmailFragment">


    <ImageView
        android:id="@+id/ivLogo1"
        android:layout_width="105dp"
        android:layout_height="48dp"
        android:src="@drawable/brflixlogo"
        android:layout_marginTop="96dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="TODO" />

    <TextView
        android:id="@+id/tvChangeEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/changeEmail"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginTop="64dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivLogo1"/>

    <TextView
        android:id="@+id/tvDoNotStay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/doNotStay"
        android:textAlignment="center"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvChangeEmail"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tiEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/e_mail"
        android:layout_marginTop="22dp"
        app:endIconTint="@color/black"
        app:endIconMode="clear_text"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDoNotStay"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tiNewEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/newEmail"
        android:layout_marginTop="22dp"
        app:endIconTint="@color/black"
        app:endIconMode="clear_text"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tiEmail"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"/>

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/btReturn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/returnV"
        android:background="@drawable/button_default"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:layout_marginTop="82dp"
        android:layout_marginStart="45dp"
        android:backgroundTint="@color/topMenuHome"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@+id/tiNewEmail"/>

    <Button
        android:id="@+id/btConfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm"
        android:layout_marginEnd="45dp"
        android:background="@drawable/button_default"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:backgroundTint="@color/topMenuHome"
        app:layout_constraintTop_toTopOf="@+id/btReturn"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
