<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradiente"
    tools:context=".ui.fragments.passwordreset.PasswordResetFragment">

    <TextView
        android:id="@+id/passwordResetText1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/passwordResetText1"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/emailResetField1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailResetField1"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:textColorHint="@color/button"
        app:boxStrokeColor="@color/button"
        app:helperText="@string/helper_required"
        app:hintTextColor="@color/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordResetText1"
        app:startIconDrawable="@drawable/outline_email_black_18">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailField01"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/emailReset"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailResetField2"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:textColorHint="@color/button"
        app:boxStrokeColor="@color/button"
        app:helperText="@string/helper_required"
        app:hintTextColor="@color/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailResetField1"
        app:startIconDrawable="@drawable/outline_email_black_18">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailField02"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/emailRetype"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/buttonResetPassword"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/rubik_bold"
        android:text="@string/buttonResetPassword"
        android:textStyle="bold"
        android:background="@drawable/button_default"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:backgroundTint="@color/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailResetField2" />


</androidx.constraintlayout.widget.ConstraintLayout>