<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.forgotpassword.ForgotPasswordFragment"
    android:background="@drawable/gradiente">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/wtToolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/topMenuHome"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/backSearch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/outline_arrow_back_white_20"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/brflixlogo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wtToolbar"
        app:layout_constraintBottom_toTopOf="@+id/txtForgotPassword"
        android:layout_marginTop="64dp"
        android:contentDescription="@string/logo_brasilflix"
        />

    <TextView
        android:id="@+id/txtForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgotPasswordDetails"
        app:layout_constraintTop_toBottomOf="@id/ivLogo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textAlignment="center"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailForgotPassword"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        app:layout_constraintTop_toBottomOf="@+id/txtForgotPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/buttonForgotPassword"
        app:helperText="@string/helper_required"
        tools:ignore="RtlCompat"
        app:startIconDrawable="@drawable/ic_nome"
        app:boxStrokeColor="@color/button"
        android:textColorHint="@color/button"
        app:hintTextColor="@color/button">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/forgotEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/e_mail" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/buttonForgotPassword"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/rubik_bold"
        android:text="@string/forgotPassword"
        android:textStyle="bold"
        android:background="@drawable/button_default"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:backgroundTint="@color/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailForgotPassword" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>