<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.confirmation.ConfirmationRegisterFragment"
    android:paddingHorizontal="50dp"
    android:background="@drawable/gradiente_externo">

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/brflixlogo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="64dp"
        android:contentDescription="@string/logo_brasilflix"
        />

    <TextView
        android:id="@+id/tvText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirmation_register"
        app:layout_constraintTop_toBottomOf="@id/ivLogo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textAlignment="center"
        />

    <ImageView
        android:id="@+id/ivCheckEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/confirmation_email_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvText1"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/logo_brasilflix"
        />


    <Button
        android:id="@+id/btGoToLogin"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/ivCheckEmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/topRatedButton"
        android:text="@string/back_to_login"
        />


</androidx.constraintlayout.widget.ConstraintLayout>